--- a/home.css
+++ b/home.css
@@ -901,3 +901,9 @@ body {
         height: 38vh;
     }
 }
+
+@media (max-width: 395px) {
+    .gateTitle {
+        font-size: 1rem;
+        font-weight: bolder;
+    }
