--- a/recipecard.css
+++ b/recipecard.css
@@ -131,13 +131,13 @@ body {
 
 @media (max-width: 395px) {
     .bottom-text {
-        font-size: 1rem;
+        font-size: 0.8rem;
         padding: 0;
         bottom: 20px;
         /* Adjust position from the bottom */
         position: relative;
         width: 100%;
-        margin-bottom: 0;
+        margin: 0;        
 }
 
 
@@ -473,8 +473,7 @@ body {
     }
 
     .ingimg {
-        max-width: 90%;
-        /* Increase image width */
+        width: 90%;
     }
 
     .ingimg:hover {
