--- a/cook.css
+++ b/cook.css
@@ -582,7 +582,8 @@ body {
     }
     
     .view-more {
-        flexwrap: wrap
+        display:flex;
+        flexwrap: wrap;
     }
 
     .recipe::after {
