--- a/recipecard.css
+++ b/recipecard.css
@@ -137,7 +137,8 @@ body {
         /* Adjust position from the bottom */
         position: relative;
         width: 65%;
-        margin: 0;        
+        margin: 0;
+    }        
 }
 
 
